monticore-generator/src/test/resources/cocos/valid/enum/Enum.mc4
package cocos.valid.enum;

grammar Enum extends cocos.valid.Enum {

 A = "a";

}
