monticore-generator/src/test/resources/cocos/invalid/A2102/A2102d.mc4
/* (c) https://github.com/MontiCore/monticore */

package cocos.invalid.A2102;

grammar A2102d {
  enum A = "a";

  B implements A;

}

